Sat Nov  2 13:47:09 2002  Owen Taylor  <otaylor@redhat.com>
	 
	* === Released 2.1.2 ===

	* NEWS: Update.

Sat Nov  2 00:22:33 2002  Owen Taylor  <otaylor@redhat.com>

	Add startup notification hooks - mostly based on patch
	by Havoc Pennington in #96772.
	
	* gdk/gdk.h gdk/x11/gdkdisplay-x11.c 
	gdk/{win32,linux-fb}/gdkmain-*.c: (gdk_notify_startup_complete):
	new function that indicates an application has finished starting
	up.
	
	* gdk/x11/gdkmain-x11.c gdk/x11/gdkdisplay-x11.c
	(_gdk_windowing_set_default_display): store value of 
	DESKTOP_STARTUP_ID on the default screen, and clear it from the 
	environment.
	
	* gdk/x11/gdkdisplay-x11.c: 
	Set _NET_STARTUP_ID hint on display's group leader window.
	
	* gtk/gtkwindow.c (gtk_window_set_auto_startup_notification):
	function to toggle whether we automatically broadcast that we've
	started up, after mapping the first toplevel window.
	(gtk_window_map): call gdk_screen_notify_startup_complete() by
	default, unless enabled by above.

	* gtk/gtkmain.c gtk/gtkcombo.c gtk/gtktoolbar.c: 
	Couple of warning fixes.

Fri Nov  1 21:03:59 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c: Add a mnemonic to the "selection"
	label. (More of #74267)

	* configure.in: Version 2.1.2

	* NEWS: Updates.

2002-11-02  Matthias Clasen  <maclas@gmx.de>

	* gtk/stock-icons/stock_jump_to_rtl_16.png,
	* gtk/stock-icons/stock_jump_to_rtl_24.png: Mirrored variants
	of stock_jump_to.
	
	* gtk/stock-icons/Makefile.am: 
	* gtk/gtkiconfactory.c (get_default_icons): Flip GTK_STOCK_FIRST,
	GTK_STOCK_LAST and GTK_STOCK_JUMP_TO for RTL locales.  (#96633)

	* gtk/gtkaccellabel.c (gtk_accel_label_expose_event): 
	Flip accel labels for RTL locales.  (#96637)
	
	* gtk/gtktearoffmenuitem.c (gtk_tearoff_menu_item_paint): 
	* gtk/gtkradiomenuitem.c (gtk_radio_menu_item_draw_indicator): 
	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_size_allocate): 
	* gtk/gtkmenuitem.c (gtk_menu_item_init): 
	(gtk_menu_item_size_request): 