@@ -1,3 +1,14 @@
+2002-11-02  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkhandlebox.c (effective_handle_position): 
+	(gtk_handle_box_size_request): 
+	(gtk_handle_box_size_allocate): 
+	(gtk_handle_box_draw_ghost): 
+	(gtk_handle_box_paint): 
+	(gtk_handle_box_button_changed): 
+	(gtk_handle_box_motion): 
+	Flip handleboxes for RTL locales.  (#96629)
+
 Sat Nov  2 13:47:09 2002  Owen Taylor  <otaylor@redhat.com>
 	 
 	* === Released 2.1.2 ===
